# arete

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json
docs/: index.html  table-database-plan.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CardComposer.tsx  CardTextEditor.tsx  CardsView.tsx  CoverPicker.tsx  EmojiPicker.tsx  InsightsView.tsx  LinkMenu.tsx  MentionMenu.tsx  PageHistoryModal.tsx  PagePeek.tsx  PageTree.tsx  PageView.tsx  Popover.tsx  ReviewView.tsx  SearchModal.tsx  ShareModal.tsx  Sidebar.tsx  SlashMenu.tsx  TabBar.tsx  Topbar.tsx  VaultPopover.tsx
src/components/db/: DatabasePage.tsx  DatabaseTable.tsx  FieldMenu.tsx  RowPageProps.tsx  cells.tsx
src/editor/: BlockHandle.ts  BlockSelect.ts  MentionCommand.ts  SlashCommand.ts  TrailingNode.ts  extensions.ts
src/editor/marks/: CardRef.ts
src/editor/nodes/: Callout.tsx  DatabaseBlock.tsx  Math.tsx  Media.tsx  PageLink.tsx  PageMention.tsx  Toggle.tsx
src/lib/: covers.ts  db.ts  emoji.ts  export-html.ts  fs-adapter.ts  history.ts  links.ts  markdown.ts  media.ts  position.ts  refs.ts  share.ts  srs-sync.ts  srs.ts  tree.ts  util.ts  vault.ts
src/store/: clock.ts  seed.ts  srs-store.ts  store.ts  types.ts
src/styles/: base.css  db.css  editor.css  menus.css  page.css  sidebar.css  srs.css
