[package]
name = "arete"
version = "0.1.0"
description = "Arete — a quiet local workspace with an Anki backbone"
authors = ["Jakub Smekal"]
license = "MIT"
edition = "2021"

# The iOS app links the same code as a static library; desktop keeps the bin.
[lib]
name = "arete_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(mobile)", "cfg(desktop)"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-opener = "2.5.4"

[profile.release]
codegen-units = 1
lto = true
strip = true
